Manually replace `<mark>` with `"mark"` in the release notes
App Store Connect doesn't allow markup:

> [!] An attribute value has invalid characters. - What's New In This Version in English (U.S.) must not contain markup language (for example, HTML tags). - /data/attributes/whatsNew (Spaceship::UnexpectedResponse)

--- a/WordPress/Resources/release_notes.txt
+++ b/WordPress/Resources/release_notes.txt
@@ -1,5 +1,5 @@
 - We've made it easier to see when there are new blocks available for use on your site
-- You can now highlight text using the <mark> HTML tag, as well as change the text and background color of the Search block button. Shiny!
+- You can now highlight text using the "mark" HTML tag, as well as change the text and background color of the Search block button. Shiny!
 - We've hidden HTML tags in post titles when you're checking out your stats.
 - We've improved Reader Discovery – showing you new things to read, while lending a helping hand to sites with low traffic. Win-win.
 - If you're part of a comment thread, you can keep track of it through in-app notifications, not just your email inbox.
