--- a/fastlane/jetpack_metadata/ar-SA/release_notes.txt
+++ b/fastlane/jetpack_metadata/ar-SA/release_notes.txt
@@ -1,5 +1,5 @@
 - لقد سهلنا معرفة ما إذا كانت هناك مكوِّنات جديدة متاحة لاستخدامها على موقعك
-- يمكنك كذلك الآن تمييز النص باستخدام وسم HTML <mark>، بالإضافة إلى تغيير لون النص والخلفية لزر مكوِّن البحث. لامع!
+- يمكنك كذلك الآن تمييز النص باستخدام وسم HTML "mark"، بالإضافة إلى تغيير لون النص والخلفية لزر مكوِّن البحث. لامع!
 - لقد قمنا بإخفاء وسوم HTML الموجودة في عناوين المقالة عند قيامك بمراجعة إحصاءاتك.
 - إذا كنت جزءًا من سلسلة تعليقات، فيمكنك تعقبها من خلال التنبيهات داخل التطبيق، وليس علبة وارد البريد الإلكتروني الخاصة بك فقط.
 - اعتادت شاشة التعليمات على الخروج من صندوقها عند تدويرها من الوضع الرأسي إلى الوضع الأفقي والعودة إلى الوضع الرأسي، ولكنها تظل الآن في مكانها.
