--- a/fastlane/jetpack_metadata/he/release_notes.txt
+++ b/fastlane/jetpack_metadata/he/release_notes.txt
@@ -1,5 +1,5 @@
 - שיפרנו את התצוגה כדי לאפשר לך לראות בקלות אם יש בלוקים חדשים שזמינים לשימוש באתר שלך
--כעת אפשר להדגיש טקסט באמצעות <mark> תגית HTML וכן לשנות את הטקסט ואת צבע הרקע בכפתור של בלוק החיפוש. נוצץ!
+-כעת אפשר להדגיש טקסט באמצעות "mark" תגית HTML וכן לשנות את הטקסט ואת צבע הרקע בכפתור של בלוק החיפוש. נוצץ!
 - הסתרנו את תגיות ה-HTML בכותרות הפוסטים בבדיקה של הנתונים הסטטיסטיים.
 - אם רשמת תגובה בשרשור תגובות, אפשר לעקוב אחריו באמצעות הודעות מובנות באפליקציה ולא רק דרך תיבת הדואר הנכנס של האימייל.
 - המסך 'עזרה' חרג מהגבולות שלו בעת סיבוב התצוגה מהאורך לרוחב ובחזרה לאורך, אבל תיקנו את הבעיה.
