--- a/fastlane/jetpack_metadata/ru/release_notes.txt
+++ b/fastlane/jetpack_metadata/ru/release_notes.txt
@@ -1,5 +1,5 @@
 - Мы упростили отслеживание появления новых блоков, доступных для использования на вашем сайте
-- Теперь можно выделять текст при помощи тега HTML <mark>, а также менять текст и цвет фона кнопки поиска блоков. Красота!
+- Теперь можно выделять текст при помощи тега HTML "mark", а также менять текст и цвет фона кнопки поиска блоков. Красота!
 - Мы скрыли теги HTML в заголовках записей в блоге при проверке статистики.
 - Если вы участвуете в обсуждении, комментарии в ветке можно отслеживать при помощи уведомлений в приложении, а не только по электронной почте.
 - Ранее при смене альбомной ориентации на книжную и обратно экран справки выходил за пределы рамки. Теперь эта проблема не возникает.
