--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,5 +1,5 @@
 - لقد سهلنا معرفة ما إذا كانت هناك مكوِّنات جديدة متاحة لاستخدامها على موقعك
-- يمكنك الآن تمييز النص باستخدام وسم HTML <mark>، بالإضافة إلى تغيير لون النص والخلفية لزر مكوِّن البحث. لامع!
+- يمكنك الآن تمييز النص باستخدام وسم HTML "mark"، بالإضافة إلى تغيير لون النص والخلفية لزر مكوِّن البحث. لامع!
 - لقد قمنا بإخفاء وسوم HTML الموجودة في عناوين المقالة عند قيامك بمراجعة إحصاءاتك.
 - لقد قمنا بتحسين اكتشاف القارئ – ما يعرض لك أشياءً جديدة لقراءتها، إلى جانب مد يد العون إلى المواقع ذات حركة المرور المنخفضة. تحقيق الربح لجميع الأطراف.
 - إذا كنت جزءًا من سلسلة تعليقات، فيمكنك تعقبها من خلال التنبيهات داخل التطبيق، وليس علبة وارد البريد الإلكتروني الخاصة بك فقط.
