--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,5 +1,5 @@
 - Мы упростили отслеживание появления новых блоков для использования на вашем сайте.
-- Теперь вы можете выделить текст с помощью тега HTML <mark>, а также изменить цвет текста и фона кнопки блока поиска. Блестяще!
+- Теперь вы можете выделить текст с помощью тега HTML "mark", а также изменить цвет текста и фона кнопки блока поиска. Блестяще!
 - Мы скрыли HTML-теги в заголовках сообщений, когда вы проверяете статистику.
 - Мы улучшили поиск в Чтиве - вам показываются новые вещи для чтения и это помогает сайтам с низким трафиком. Беспроигрышный вариант.
 - Если вы являетесь участником цепочки комментариев, вы можете отслеживать это с помощью уведомлений в приложении, а не только по Email.
