--- a/fastlane/jetpack_metadata/it/release_notes.txt
+++ b/fastlane/jetpack_metadata/it/release_notes.txt
@@ -1,5 +1,5 @@
 - Abbiamo reso più semplice visualizzare i punti in cui sono disponibili nuovi blocchi da usare sul tuo sito
-- Ora puoi evidenziare il testo usando il tag HTML <mark> e modificare il testo e il colore di sfondo del pulsante del blocco Cerca. È nuovo di zecca.
+- Ora puoi evidenziare il testo usando il tag HTML "mark" e modificare il testo e il colore di sfondo del pulsante del blocco Cerca. È nuovo di zecca.
 - Abbiamo nascosto i tag HTML nei titoli degli articoli quando controlli le statistiche.
 - Se hai preso parte a un thread di commenti, puoi tenerne traccia tramite le notifiche in-app, non solo tramite la tua posta in arrivo dell'e-mail.
 - La schermata Guida si staccava dalla sua casella quando veniva ruotata dalla posizione verticale a quella orizzontale e di nuovo a quella verticale. Ora però non si muove.
