--- a/fastlane/jetpack_metadata/ja/release_notes.txt
+++ b/fastlane/jetpack_metadata/ja/release_notes.txt
@@ -1,5 +1,5 @@
 - サイトで使用可能な新しいブロックを簡単に確認できるようになりました
-- <mark> HTML タグを使ってテキストをハイライトできるようになったほか、「検索」ブロックボタンのテキストや背景色を変更できるようになりました。 新機能
+- "mark" HTML タグを使ってテキストをハイライトできるようになったほか、「検索」ブロックボタンのテキストや背景色を変更できるようになりました。 新機能
 - 統計情報を確認するときに、投稿タイトルの HTML タグを非表示にしました。
 - コメントスレッドに参加している場合は、メールの受信トレイだけでなく、アプリ内通知でも管理できるようになりました。
 - ヘルプ画面を縦向きから横向きに回転したり縦向きに戻したりすると、枠からはみ出していましたが、正常に表示されるようになりました。
