--- a/fastlane/jetpack_metadata/zh-Hans/release_notes.txt
+++ b/fastlane/jetpack_metadata/zh-Hans/release_notes.txt
@@ -1,5 +1,5 @@
 - 经过我们改进后，您现在可以更加一目了然地知晓站点上何时有新区块可供使用
-- 现在，您可以使用 <mark> HTML 标记突出显示文本，并可以更改“搜索”区块按钮的文本和背景颜色。 非常绚丽！
+- 现在，您可以使用 "mark" HTML 标记突出显示文本，并可以更改“搜索”区块按钮的文本和背景颜色。 非常绚丽！
 - 在您查看统计数据时，我们在文章标题中隐藏了 HTML 标签。
 - 如果您参与了评论嵌套，您不仅可以通过电子邮件收件箱来跟踪评论，还可以通过应用内通知来跟踪。
 - 之前，“帮助”屏幕在从竖屏转到横屏再转回竖屏的跳转过程中会跳出框，现在不存在这个问题了。
