--- a/fastlane/jetpack_metadata/zh-Hant/release_notes.txt
+++ b/fastlane/jetpack_metadata/zh-Hant/release_notes.txt
@@ -1,5 +1,5 @@
 - 新區塊變得更顯眼，讓你知道有新區塊可供網站使用
-- 你現在可以使用 <mark> HTML 標籤反白顯示文字，也能變更搜尋區塊按鈕的文字和背景顏色。 閃閃發亮！
+- 你現在可以使用 "mark" HTML 標籤反白顯示文字，也能變更搜尋區塊按鈕的文字和背景顏色。 閃閃發亮！
 - 我們隱藏了文章標題的 HTML 標籤，你在查看統計資料時不會看到。
 - 如果你曾在留言串中留言，除了可以使用電子郵件收件匣追蹤留言，現在也可以使用應用程式內部通知追蹤。
 - 過去從直向檢視旋轉到橫向檢視再轉回直向時，「說明」部分會超出畫面範圍，但現在已修正這個錯誤。
