--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,5 +1,5 @@
 - サイトで使用可能な新しいブロックを簡単に確認できるようになりました
--  <mark> HTML タグを使ってテキストをハイライトできるようになったほか、「検索」ブロックボタンのテキストや背景色を変更できるようになりました。 新機能
+-  "mark" HTML タグを使ってテキストをハイライトできるようになったほか、「検索」ブロックボタンのテキストや背景色を変更できるようになりました。 新機能
 - 統計情報を確認するときに、投稿タイトルの HTML タグを非表示にしました。
 - Reader Discovery を改善しました。新しい投稿を紹介するとともに、アクセス数の少ないサイトにも支援の手を差し伸べます。 お互いに有益な機能です。
 - コメントスレッドに参加している場合は、メールの受信トレイだけでなく、アプリ内通知でも管理できるようになりました。
