--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,5 +1,5 @@
 - Sitenizde kullanılabilecek yeni bloklar olduğunda bunları görmenizi kolaylaştırdık
-- Artık <mark> HTML etiketini kullanarak metni vurgulayabilir ve Arama bloku düğmesinin metin ve arka plan rengini değiştirebilirsiniz. Göz alıcı!
+- Artık "mark" HTML etiketini kullanarak metni vurgulayabilir ve Arama bloku düğmesinin metin ve arka plan rengini değiştirebilirsiniz. Göz alıcı!
 - İstatistiklerinizi kontrol ederken gönderi başlıklarında gördüğünüz HTML etiketlerini gizledik.
 - Okuyucu Keşfi'ni geliştirdik; size okunacak yeni şeyler gösterirken trafiği düşük sitelere de yardım eli uzattık. Kazan-kazan.
 - Bir yorum dizisinin parçasıysanız, yalnızca e-posta gelen kutunuzdan değil, uygulama içi bildirimlerden de takip edebilirsiniz.
