--- a/fastlane/jetpack_metadata/en-US/release_notes.txt
+++ b/fastlane/jetpack_metadata/en-US/release_notes.txt
@@ -1,3 +1,6 @@
-- Embed block updates: We’ve enabled WordPress embed previews, as well as embeds for Instagram and Vimeo content. For some media, you may successfully embed a URL but cannot preview the content; in these instances, you will see a “No preview available” message. In cases when you are unable to embed media, you will now see a “Retry” option to embed the content again, and an alternate option to convert it to a link instead.
-
-- Various improvements and fixes: We’ve streamlined your My Site menu, changing “Blog Posts” to “Posts” and “Site Pages” to “Pages.” (This has not affected your post and page content — we promise!) We also fixed a bug that prevented you from following a conversation by email through a post’s comments.  We also fixed an editor issue when displaying images.
+- We've made it easier to see when there are new blocks available for use on your site
+- You can now highlight text using the "mark" HTML tag, as well as change the text and background color of the Search block button. Shiny!
+- We've hidden HTML tags in post titles when you're checking out your stats.
+- If you're part of a comment thread, you can keep track of it through in-app notifications, not just your email inbox.
+- The Help screen used to break out of its box when rotated from portrait to landscape and back to portrait, but now it's staying put.
+- We fixed more cases where embed blocks would show "unable to display content", allowing you to see all of your content.
