--- a/WordPress/Resources/release_notes.txt
+++ b/WordPress/Resources/release_notes.txt
@@ -1,4 +1,11 @@
-* [*] Comment Reply: updated UI. [#17443, #17445]
-* [***] Two-step Authentication notifications now require an unlocked device to approve or deny them.
-* [***] Site Comments: Updated comment details with a fresh new look and capability to display rich contents. [#17466]
+Two-step authentication now comes with extra security. You'll need to unlock your device to approve or deny notifications.
 
+When you head over to My Site > Comments, you'll see a fresh look and even fresher comment details, including:
+
+- A sneak peek of the post title or parent comment, depending on whether the author left a comment on the post or replied to an existing comment
+- Rich content so you can see each comment just as the author wrote it
+- A share button for approved comments
+- Visible email and IP addresses for comment authors with Administrator or Editor roles
+- Tappable web address to visit the author's URL (instead of their avatar image)
+
+Finally, we updated the UI for the Reply view, both minimized and fullscreen. Looking sharp!
