--- a/WordPress/Resources/AppStoreStrings.po
+++ b/WordPress/Resources/AppStoreStrings.po
@@ -34,16 +34,19 @@ msgid ""
 "View the Privacy Notice for California Users at https://automattic.com/privacy/#california-consumer-privacy-act-ccpa.\n"
 msgstr ""
 
-msgctxt "v18.6-whats-new"
+msgctxt "v18.7-whats-new"
 msgid ""
-"- We've made it easier to see when there are new blocks available for use on your site\n"
-"- You can now highlight text using the <mark> HTML tag, as well as change the text and background color of the Search block button. Shiny!\n"
-"- We've hidden HTML tags in post titles when you're checking out your stats.\n"
-"- We've improved Reader Discovery – showing you new things to read, while lending a helping hand to sites with low traffic. Win-win.\n"
-"- If you're part of a comment thread, you can keep track of it through in-app notifications, not just your email inbox.\n"
-"- Speaking of comments, we heard that some might be missing when viewing comments from the Reader. Don't worry – we found and fixed the problem.\n"
-"- The Help screen used to break out of its box when rotated from portrait to landscape and back to portrait, but now it's staying put.\n"
-"- We fixed more cases where embed blocks would show "unable to display content", allowing you to see all of your content.\n"
+"Two-step authentication now comes with extra security. You'll need to unlock your device to approve or deny notifications.\n"
+"\n"
+"When you head over to My Site > Comments, you'll see a fresh look and even fresher comment details, including:\n"
+"\n"
+"- A sneak peek of the post title or parent comment, depending on whether the author left a comment on the post or replied to an existing comment\n"
+"- Rich content so you can see each comment just as the author wrote it\n"
+"- A share button for approved comments\n"
+"- Visible email and IP addresses for comment authors with Administrator or Editor roles\n"
+"- Tappable web address to visit the author's URL (instead of their avatar image)\n"
+"\n"
+"Finally, we updated the UI for the Reply view, both minimized and fullscreen. Looking sharp!\n"
 msgstr ""
 
 #. translators: This is a standard chunk of text used to tell a user what's new with a release when nothing major has changed.
