--- a/WordPress/Jetpack/Resources/AppStoreStrings.po
+++ b/WordPress/Jetpack/Resources/AppStoreStrings.po
@@ -41,7 +41,7 @@ msgstr ""
 msgctxt "v18.7-whats-new"
 msgid ""
 "Two-step authentication now comes with extra security. You'll need to unlock your device to approve or deny notifications.\n"
-"We added Media File and Attachment Page options to the image block's Link To menu so you can set commonly used URLs.\n"
+"We expanded the “Link To” setting for the image block to include “Media File” and “Attachment Page” options alongside the preexisting “Custom URL” option.\n"
 "We fixed an issue that made the interface crash when users copied and pasted lists from Microsoft Word.\n"
 "\n"
 "When you head over to My Site > Comments, you'll see a fresh look and even fresher comment details, including:\n"
